--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,9 +21,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Your Name"
+        android:hint="@string/your_name"
         android:inputType="textPersonName"
-        android:textColor="#000000"
+        android:textColor="#673AB7"
         android:textSize="24sp" />
 
     <TextView
@@ -39,9 +39,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Your GPA"
+        android:hint="@string/your_gpa"
         android:inputType="textPersonName"
-        android:textColor="#000000"
+        android:textColor="#673AB7"
         android:textSize="24sp" />
 
 </LinearLayout>
